<resources>
    <string name="app_name">Weather4Runners</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_id">1858586351082008</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="facebook_passOver">Skip</string>
    <string name="action_refresh">Refresh</string>
    <string name="bool_1">bool_1</string>
    <string name="seek_temperature">seek_temperature</string>
    <string name="seek_humidity">seek_humidity</string>
    <string name="seek_precipitation">seek_precipitation</string>
    <string name="seek_windspeed">seek_windspeed</string>
    <string name="seek_cloudiness">seek_cloudiness</string>
    <string name="seek_starthour">seek_starthour</string>
    <string name="seek_endhour">seek_endhour</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_main">Main</string>
    <string name="menu_change_propositions_number_title" > Change items number</string>
    <string name="menu_set_current_location_title"> Set your location</string>
    <string name="menu_weather_preferences" > Weather conditions preferences </string>
    <string name="menu_show_propositions"> Show propositions </string>
    <string name="menu_update_weather_forecast">Update weather forecast </string>
    <string name="menu_declarations"> Your declarations </string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_favourite_values">Favourite values</string>
    <string name="menu_order_of_importance">Order of importance</string>
    <string name="menu_your_locations">Your locations</string>
    <string name="menu_app_info">App info</string>

    <string name="important_conditions_description">Remove unimportant items and order the rest</string>

    <string name="menu_important_conditions_reset_title">Reset</string>

    <string name="parsing_input_error_message">Cannot parse the input</string>
    <string name="error_with_internet_con_message">Problem with the Internet connection</string>

    <string name="location_updated_message">Location updated</string>

    <string name="item_checked_message"> The item has been checked </string>
    <string name="item_unchecked_message"> The item has been unchecked </string>

    <string name="gps_dialog_title"> GPS </string>
    <string name="gps_dialog_message"> GPS is not enabled. Do you want to go to settings menu? </string>
    <string name="gps_dialog_positive"> Yes</string>
    <string name="gps_dialog_negative">No</string>

    <string name="update_dialog_title">Updating weather forecast</string>
    <string name="update_dialog_message">Updating weather forecast will remove all of your declarations. Are you sure?</string>
    <string name="update_dialog_positive">Yes</string>
    <string name="update_dialog_negative">No</string>

    <string name="info_weather_from">Weather forecast from</string>
    <string name="info_icons_from">Weather icons from</string>

    <string name="menu_chart_share">Share</string>

    <string name="choose_location_type_message">Choose a location type</string>
    <string name="choose_city_country_message">Location input</string>
    <string name="city_name">City</string>
    <string name="country_name">Country</string>

    <string name="incorrect_input_message">Incorrect input</string>

    <string-array name="location_types">
        <item>Set my current location</item>
        <item>Other location</item>
    </string-array>

    <string name="location_set_message">Location set</string>
    <string name="start_setting_current_location_message"> Start setting your current location</string>
</resources>
